--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                               <h2 class="location_text">To</h2>
                               <div class="form-group">
                                  <select class="form-control" id="exampleFormControlSelect1">
-                                    <option>Drop Your iteam</option>
+                                    <option>Drop Your item</option>
                                     <option>2</option>
                                     <option>3</option>
                                     <option>4</option>
