update html page

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
       </div>
       <!-- chose section end -->
       <!-- client section start -->
-      <div class="client_section layout_padding">
+     <!--- <div class="client_section layout_padding">
          <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -298,7 +298,7 @@
                </div>-->
             </div>
          </div>
-      </div>
+      </div>-->
       <!-- client section end -->
       <!-- contact section start -->
       <div class="contact_section layout_padding">
