--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                <div class="carousel-item active">
                   <div class="container">
                      <div class="banner_main">
-                        <h1 class="banner_taital">Welcometo to PYCO'S Fleet Management</h1>
+                        <h1 class="banner_taital">Welcome to PYCO'S Fleet Management</h1>
                         <div class="read_bt"><a href="about.html">Read More</a></div>
                      </div>
                   </div>
@@ -85,7 +85,7 @@
                <div class="carousel-item">
                   <div class="container">
                      <div class="banner_main">
-                        <h1 class="banner_taital">Welcome to PYCOS'S Fleet Management</h1>
+                        <h1 class="banner_taital">Welcome to PYCOS Fleet Management</h1>
                        <div class="read_bt"><a href="about.html">Read More</a></div>
                      </div>
                   </div>
@@ -222,14 +222,14 @@
       <!-- chose section start -->
       <div class="chose_section layout_padding">
          <div class="container">
-            <h1 class="blog_taital">Our Fleet Management</h1>
+            <h1 class="blog_taital">Top Fleet Management Services</h1>
             <p class="lorem_text">Comprehensive truck fleet management solutions</p>
             <div class="chose_section_2 layout_padding">
                <div class="row">
                   <div class="col-sm-3">
                      <div class="icon_1"><img src="images/icon-1.png"></div>
-                     <h2 class="price_text">3+</h2>
-                     <h2 class="years_text">Years of Fleet Management</h2>
+                     <h2 class="price_text">Vehicle Maintenance Management</h2>
+                     <h2 class="years_text">Scheduling and tracking regular maintenance to ensure optimal performance.</h2>
                   </div>
                   <div class="col-sm-3">
                      <div class="icon_1"><img src="images/icon-2.png"></div>
