--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                <div class="carousel-item">
                   <div class="container">
                      <div class="banner_main">
-                        <h1 class="banner_taital">Welcome to PYCO'S Fleet Management</h1>
+                        <h1 class="banner_taital">Welcome to PYCOS Fleet Management</h1>
                         <div class="read_bt"><a href="about.html">Read More</a></div>
                      </div>
                   </div>
