--- a/index.html
+++ b/index.html
@@ -233,18 +233,18 @@
                   </div>
                   <div class="col-sm-3">
                      <div class="icon_1"><img src="images/icon-2.png"></div>
-                     <h2 class="price_text">100+</h2>
-                     <h2 class="years_text">Projects Delivered</h2>
+                     <h2 class="price_text">Fuel Management </h2>
+                     <h2 class="years_text">Monitoring fuel usage to reduce costs and improve efficiency.</h2>
                   </div>
                   <div class="col-sm-3">
                      <div class="icon_1"><img src="images/icon-3.png"></div>
-                     <h2 class="price_text">300+</h2>
-                     <h2 class="years_text">Satisfied Customers</h2>
+                     <h2 class="price_text">Driver Management</h2>
+                     <h2 class="years_text">Tracking driver behavior for safety and performance improvement.</h2>
                   </div>
                   <div class="col-sm-3">
                      <div class="icon_1"><img src="images/icon-4.png"></div>
-                     <h2 class="price_text">100+</h2>
-                     <h2 class="years_text">Cheap Rates</h2>
+                     <h2 class="price_text">Route Optimization</h2>
+                     <h2 class="years_text">Planning efficient routes to reduce travel time and fuel consumption.</h2>
                   </div>
                </div>
             </div>
@@ -340,7 +340,7 @@
          <div class="container">
             <div class="row">
                <div class="col-lg-3 col-sm-6">
-                  <h3 class="rolio_text">PYCO'S </h3>
+                  <h3 class="rolio_text">PYCOS </h3>
                   <p class="footer_text">We specialize in comprehensive truck fleet management solutions. From maintenance and compliance to route optimization</p>
                   <div class="social_icon">
                     <!--- <ul>
