--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>PYCO'S Fleet Management</title>
+      <title>PYCOS Fleet Management</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -101,7 +101,7 @@
          <div class="container">
             <div class="row">
                <div class="col-lg-3 col-sm-6">
-                  <h3 class="rolio_text">PYCO'S </h3>
+                  <h3 class="rolio_text">PYCOS </h3>
                   <p class="footer_text">We specialize in comprehensive truck fleet management solutions. From maintenance and compliance to route optimization</p>
                   <div class="social_icon">
                     <!--- <ul>
