--- a/index.html
+++ b/index.html
@@ -229,22 +229,22 @@
                   <div class="col-sm-3">
                      <div class="icon_1"><img src="images/icon-1.png"></div>
                      <h2 class="price_text">Vehicle Maintenance Management</h2>
-                     <h2 class="years_text">Scheduling and tracking regular maintenance to ensure optimal performance.</h2>
+                     <h2 class="years_text"></h2>
                   </div>
                   <div class="col-sm-3">
                      <div class="icon_1"><img src="images/icon-2.png"></div>
                      <h2 class="price_text">Fuel Management </h2>
-                     <h2 class="years_text">Monitoring fuel usage to reduce costs and improve efficiency.</h2>
+                     <h2 class="years_text"></h2>
                   </div>
                   <div class="col-sm-3">
                      <div class="icon_1"><img src="images/icon-3.png"></div>
                      <h2 class="price_text">Driver Management</h2>
-                     <h2 class="years_text">Tracking driver behavior for safety and performance improvement.</h2>
+                     <h2 class="years_text"></h2>
                   </div>
                   <div class="col-sm-3">
                      <div class="icon_1"><img src="images/icon-4.png"></div>
                      <h2 class="price_text">Route Optimization</h2>
-                     <h2 class="years_text">Planning efficient routes to reduce travel time and fuel consumption.</h2>
+                     <h2 class="years_text"></h2>
                   </div>
                </div>
             </div>
