--- a/index.html
+++ b/index.html
@@ -228,22 +228,22 @@
                <div class="row">
                   <div class="col-sm-3">
                      <div class="icon_1"><img src="images/icon-1.png"></div>
-                     <h2 class="price_text">Vehicle Maintenance Management</h2>
+                     <h2 class="price_text">Good pricing</h2>
                      <h2 class="years_text"></h2>
                   </div>
                   <div class="col-sm-3">
                      <div class="icon_1"><img src="images/icon-2.png"></div>
-                     <h2 class="price_text">Fuel Management </h2>
+                     <h2 class="price_text">Efficient </h2>
                      <h2 class="years_text"></h2>
                   </div>
                   <div class="col-sm-3">
                      <div class="icon_1"><img src="images/icon-3.png"></div>
-                     <h2 class="price_text">Driver Management</h2>
+                     <h2 class="price_text">Durable</h2>
                      <h2 class="years_text"></h2>
                   </div>
                   <div class="col-sm-3">
                      <div class="icon_1"><img src="images/icon-4.png"></div>
-                     <h2 class="price_text">Route Optimization</h2>
+                     <h2 class="price_text">Customer Friendly</h2>
                      <h2 class="years_text"></h2>
                   </div>
                </div>
